--- a/poll-service/client/public/index.html
+++ b/poll-service/client/public/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
     content="A service created using create-react-app to provide the details about the reviews provided for a google play product" />
-  <link rel="apple-touch-icon" href="logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,7 +26,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="poll"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
