--- a/description-service/public/index.html
+++ b/description-service/public/index.html
@@ -23,13 +23,12 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <script src="//unpkg.com/styled-components/dist/styled-components.min.js"></script>
+    <!-- <script src="//unpkg.com/styled-components/dist/styled-components.min.js"></script> -->
 
     <title>my new App</title>
   </head>
   <body>
     <div id="Discrption"></div>
-
-    <script type="module" src="./app.js"></script>
+    <script type="text/javascript" src="./bundle.js"></script>
   </body>
 </html>
